# wpos

./: .gitignore  LICENSE  README.md  qtaccount.ini
wpos/: BUGS  CMakeLists.txt  LICENSE  Note  README  TODO  problems  wpos.pro
wpos/cmake/Modules/: FindODB.cmake  UseODB.cmake
wpos/dbusprinter/: CMakeLists.txt  dbusprinter  dbusprinter.cpp  dbusprinter.h  dbusprinter.pro  dbusprinterinterface.h  main.cpp  main.h  printer.cpp  printer.h  printermanager.cpp  printermanager.h  printersamsungsrp350.cpp  printersamsungsrp350.h  printerticket.cpp  printerticket.h  xmlrpcprinter.cpp  xmlrpcprinter.h
wpos/dbusprinter/etc/: dcopprinter_config.xml
wpos/dbusprinter/usr/: replace.pl
wpos/dbusreceipt/: CMakeLists.txt  README  dbusreceipt  dbusreceipt.pro  dbusreceiptmanager.cpp  dbusreceiptmanager.h  dbusreceiptmediator.cpp  dbusreceiptmediator.h  dbusreceiptprimitive.cpp  dbusreceiptprimitive.h  main.cpp  receiptchangenotifiyer.cpp  receiptchangenotifiyer.h  receiptclient.cpp  receiptclient.h  receiptclientmediator.cpp  receiptclientmediator.h  receiptdb.cpp  receiptdb.h  receiptmediatorinterface.h  receiptprimitiveinterface.h
wpos/dbusreceipt/etc/: dcopreceipt_config.xml
wpos/dcopreports/: CMakeLists.txt
wpos/domainmodel/: CMakeLists.txt  daterange.cpp  daterange.h  daterange.hxx  default_ptr.hxx  domainmodel.pro  domainmodel_global.h  monetary.cpp  monetary.h  monetary.hxx  persistable.cpp  persistable.h  persistable.hxx
wpos/domainmodel/core/: group.cpp  group.h  party.cpp  party.h  party.hxx  user.cpp  user.h  user.hxx
wpos/domainmodel/product/: pricelog.cpp  pricelog.h  pricelog.hxx  product.cpp  product.h  product.hxx  producttemplate.cpp  producttemplate.h  producttemplate.hxx  uom.cpp  uom.h  uom.hxx
wpos/etc/: button_state.xml  company_ticket_data.xml  dcopprinter_config.xml  invitations_description.xml  invoice.xml  lounges.xml  order_description.xml  printerhtml.xml
wpos/etc/ntpv/: advanced_order_description.xml  bar.xml  bar_database.xml  button_state.xml  company_ticket_data.xml  dcopprinter_config.xml  dcopreceipt_config.xml  devices_config.xml  invitations_description.xml  invoice.xml  kitchen_printerhtml.xml  lounges.xml  ntpv_buttons.xml  order_description.xml  printerhtml.xml  printertickettotal.xml  printerz.xml  printerz_old.xml  printerz_sin_opciones.xml
wpos/etc/templates/: kitchen_printerhtml_40.xml  template_invoice.xml  template_invoice_40.xml  template_ticket.xml  template_ticket_40.xml
wpos/libbslxml/: CMakeLists.txt  README  comp.h  libbslxml.pro  utils.cpp  utils.h  xmlconfig.cpp  xmlconfig.h  xmlconfigio.cpp  xmlconfigio.h  xmlconfigprivate.cpp  xmlconfigprivate.h
wpos/libbslxml/API/: Sector.html  XmlConfig.html  a.ps  full-list-Sector.html  full-list-XmlConfig.html  sector.ps
wpos/libqutexr/: CMakeLists.txt  README  README_ES  copyright  copyright_es  libqutexr.pro  rpcencoder.cpp  rpcencoder.h  rpcserver.cpp  rpcserver.h  rpcserverimp.cpp  rpcserverimp.h  rpcsocket.cpp  rpcsocket.h  tcprpcserver.cpp  tcprpcserver.h  websocketrpcserver.cpp  websocketrpcserver.h  xmlrpcserver.cpp  xmlrpcserver.h  xrbase64.cpp  xrbase64.h  xrclient.cpp  xrclient.h  xrfaultcodes.h  xrmethodcall.cpp  xrmethodcall.h  xrmethodresponse.cpp  xrmethodresponse.h  xrvariant.cpp  xrvariant.h
wpos/libqutexr/html/: annotated.html  classHTTPMessage-members.html  classHTTPMessage.html  classHTTPRequest-members.html  classHTTPRequest.html  classHTTPServer-members.html  classHTTPServer.html  classHTTPSocket-members.html  classHTTPSocket.html  classXRBase64-members.html  classXRBase64.html  classXRClient-members.html  classXRClient.html  classXRMethodCall-members.html  classXRMethodCall.html  classXRMethodResponse-members.html  classXRMethodResponse.html  classXRServer-members.html  classXRServer.html  classXRValidationServer-members.html  classXRValidationServer.html  classXRVariant-members.html  classXRVariant.html  client_8h-source.html  clientimpl_8h-source.html  (+18 more)
wpos/prism/: AUTHORS  CMakeLists.txt  COPYING  main.cpp
wpos/wpos/: CMakeLists.txt  custom.pri  greeter.cpp  greeter.h  greeterinterface.h  loginscreen.cpp  loginscreen.h  loginscreeninterface.h  loginwidget.ui  main.cpp  main.h  mainscreen.cpp  mainscreen.h  postinst  readconfigscreen.cpp  readconfigscreen.h  readconfigwidget.cpp  readconfigwidget.h  readconfigwidget.ui  salesscreen.cpp  salesscreen.h  saleswidget.4ui  saleswidget.ui  wpos  wpos.pro
wpos/wposbo/: CMakeLists.txt  custom.pri  devicesbaseconfig.4ui  main.cpp  mainscreen.cpp  mainscreen.h  postinst  wposbo  wposbo.pro
wpos/wposcore/: CMakeLists.txt  basicdatabase.cpp  basicdatabase.h  config.cpp  config.h  genericsignalmanager.cpp  genericsignalmanager.h  hlist.h  idle_filter.cpp  idle_filter.h  optionnode.cpp  optionnode.h  productextrainfo.cpp  productextrainfo.h  signals.cpp  signals.h  utility.cpp  utility.h  wposcore.pro
wpos/wposgui/: CMakeLists.txt  visualproduct.h  wposgui.pro  wposgui.qrc
wpos/wposmodel/: CMakeLists.txt  wposmodel.pro
wpos/wposrpcd/: CMakeLists.txt  main.cpp  validationserver.cpp  validationserver.h
wpos/wposrpclient/: CMakeLists.txt  clientimpl.cpp  clientimpl.h  main.cpp
wpos/wposwidget/: CMakeLists.txt  basickeyboardbox.cpp  basickeyboardbox.h  dragobjects.cpp  dragobjects.h  effects.cpp  effects.h  floatkeyboard.cpp  floatkeyboard.h  floatkeyboardbox.cpp  floatkeyboardbox.h  global.cpp  global.h  iwidgetconfig.cpp  iwidgetconfighelper.cpp  iwidgetconfighelper.h  keyboardwidget.ui  loungewidget.ui  menupage.cpp  menupage.h  menusmanager.cpp  menusmanager.h  menusmanager.ui  menustack.cpp  menustack.h  numkeyboard.cpp  numkeyboard.h  numkeyboard.ui  numkeyboardbox.cpp  numkeyboardbox.h  numpad.cpp  numpad.h  numpad.ui  ordercontentview.cpp  ordercontentview.h  ordercontrols.h  orderfooterview.cpp  orderfooterview.h  orderheaderview.cpp  orderheaderview.h  (+19 more)
wpos/xmlmanage/: CMakeLists.txt  README  comon.h  fileutils.cpp  fileutils.h  helpclass.cpp  helpclass.h  main.cpp  xmldelete.cpp  xmldelete.h  xmllist.cpp  xmllist.h  xmlmanage  xmlmanage.pro  xmlread.cpp  xmlread.h  xmlwrite.cpp  xmlwrite.h
(+610 files in other folders)
